modify: fix the contrast issue of the home slider

--- a/src/styles/ui/contrast.scss
+++ b/src/styles/ui/contrast.scss
@@ -334,6 +334,8 @@ body.contrast{
 	}
 
 	.hero-copy-cta {
+		background-color: #000 !important;
+		color: $contrast !important;
 		&:hover {
 		  background: transparent !important;
 		  color: #fff !important;
